--- a/styles.css
+++ b/styles.css
@@ -14,17 +14,14 @@ main {
   align-items: center;
   justify-content: space-between;
   background-color: #e1e6ef;
-  padding: 0px;
+  padding: 8px 24px;
   height: 56px;
 }
-.invoices {
-  padding: 24px;
-}
+
 .button-groups {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 8px;
   gap: 8px;
 }
 
@@ -122,7 +119,6 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0px;
   gap: 12px;
 }
 
@@ -241,13 +237,6 @@ thead tr td:nth-child(7) {
   align-items: flex-end;
 }
 
-tbody tr td p:last-child {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 10px;
-  line-height: 14px;
-}
-
 tbody tr td button {
   border: none;
   background-color: transparent;
@@ -266,6 +255,18 @@ tbody tr td div {
   background-color: #e8f1fe;
 }
 
+.state {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 17px;
+}
+
+.receipt {
+  color: rgba(29, 36, 51, 0.8);
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+}
 .state--progress p {
   color: #3d8af6;
 }
@@ -287,16 +288,14 @@ tbody tr td div {
   color: #5abb7a;
 }
 
-.date {
-  color: #e0593e;
-  background-color: #ffefec;
-  width: fit-content;
-}
-
+.date,
 .total {
   color: #e0593e;
   background-color: #ffefec;
   width: fit-content;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
 }
 
 aside {
@@ -321,8 +320,6 @@ aside {
 
 .add {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
   align-items: center;
   padding: 10px 0px 10px 16px;
   border: none;
@@ -418,18 +415,12 @@ aside {
   align-items: flex-start;
   padding: 16px 24px;
   gap: 10px;
-
-  width: 338px;
   height: 182px;
   background-color: #e1e6ef;
   border-radius: 5px;
 }
 
-.header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+section .header {
   padding: 0px;
   gap: 141px;
 }
@@ -444,8 +435,6 @@ aside {
 }
 
 .content {
-  width: 290px;
-  height: 60px;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
