--- a/styles.css
+++ b/styles.css
@@ -420,12 +420,13 @@ aside {
   border-radius: 5px;
 }
 
-section .header {
-  padding: 0px;
-  gap: 141px;
+.customers-header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.header h1 {
+.customers-header h1 {
   font-family: "Libre Franklin", sans-serif;
   font-weight: 700;
   font-size: 20px;
